added filter to posts to hide posts with given value HAND-10
